TFP-5415: Forenkler håndtering av SPER status - ved manglende krav grunnlag.